# phoneme-classifier

./: .gitmodules  CMakeLists.txt  README.md  index.html  params.json
src/: Dataset.cpp  HtkFile.cpp  PhonemeFrameBasedDecode.cpp  PhonemeFrameBasedTrain.cpp
